chore: set log level to error on digichem-prod deployment
Updated from info to error level to reduce log verbosity in production.
Valid log levels for zap are: debug, info, error, panic.

--- a/deploy/overlays/prod/deployment-patch.yaml
+++ b/deploy/overlays/prod/deployment-patch.yaml
@@ -12,7 +12,7 @@ spec:
         - --leader-elect=true
         - --metrics-bind-address=:8080
         - --health-probe-bind-address=:8081
-        - --zap-log-level=warn
+        - --zap-log-level=error
         - --zap-devel=false
         - --zap-encoder=json
         - --zap-stacktrace-level=error
